kubernetes/apps/monitor/grafana/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitor
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "grafana.${SECRET_DOMAIN}"
    gethomepage.dev/app: "grafana"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/description: "The open and composable observability and data visualization platform"
    gethomepage.dev/href: "https://grafana.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/category: "Kubernetes"
    gethomepage.dev/icon: "sh-grafana.png"
    # gethomepage.dev/widget.type: grafana
    # gethomepage.dev/widget.url: "https://grafana.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.username: ""
    # gethomepage.dev/widget.password: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`grafana.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        # - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: "${SECRET_DOMAIN/./-}-monitor-tls"
